src/test/deca/context/invalid/decl_method_01.deca
// Description:
//    Teste la redéfinition d'une méthode avec une signature différente
//
// Resultats:
//    Ligne 17: La signature de la méthode init  dans la classe actuelle n'est pas identique à celle de la super classe
//
// Historique:
//    cree le 20/01/2023
class A{
    int x;
    void init(int a){
        x = a;
    }
}
class B extends A{
    int y;
    void init(int a, int b){
    x = a;
    y = b;
    }
}
